[project]
name = "simple-config-parser"
version = "0.0.1"
description = "A simple config parser for Python"
authors = [
    {name = "Dominik Willner", email = "th33xitus@gmail.com"},
]
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/dw-0/simple-config-parser"
repository = "https://github.com/dw-0/simple-config-parser"
documentation = "https://github.com/dw-0/simple-config-parser"

[project.optional-dependencies]
dev=["ruff"]

[tool.ruff]
required-version = ">=0.3.4"
respect-gitignore = true
exclude = [".git",".github", "./docs"]
line-length = 88
indent-width = 4
output-format = "full"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
minversion = "8.2.1"
testpaths = ["tests/**/*.py"]
addopts = "-svvv --cov --cov-config=pyproject.toml --cov-report=html"

[tool.coverage.run]
branch = true
source = ["src.simple_config_parser"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.coverage.html]
title = "SimpleConfigParser Coverage Report"
directory = "htmlcov"
