[project]
requires-python = ">=3.8"

[project.optional-dependencies]
dev=["ruff", "mypy", "pytest"]

[tool.ruff]
required-version = ">=0.9.10"
respect-gitignore = true
exclude = [".git",".github", "./docs"]
line-length = 88
indent-width = 4
output-format = "full"
target-version = "py38"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.8"
platform = "linux"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "8.2.1"
testpaths = ["kiauh/core/simple_config_parser/tests"]
pythonpath = ["kiauh"]
